nextcloud/network-policy-nextcloud-allow-egress-to-loki.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nextcloud-allow-egress-to-loki
  namespace: nextcloud
spec:
  podSelector:
    matchLabels:
      app: nextcloud
      component: web
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: loki
      ports:
        - protocol: TCP
          port: 3100
